post one product
